<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
         <item
            android:id="@+id/nav_course"
            android:icon="@drawable/ic_date_range_black_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_weather"
            android:icon="@drawable/ic_wb_cloudy_black_24dp"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_account"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/menu_slideshow" />
    </group>

    <item android:title="@string/about_author">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_error_black_24dp"
                android:title="@string/menu_about" />
        </menu>
    </item>

</menu>
