<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity"
    android:background="@mipmap/background">

    <TextView
        android:layout_marginTop="150dp"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_head"
        android:textSize="30sp"/>

    <EditText
        android:id="@+id/login_user"
        android:layout_marginTop="70dp"
        android:layout_gravity="center_horizontal"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:textSize="18sp"
        android:hint="@string/login_user"/>

    <EditText
        android:id="@+id/login_password"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:textSize="18sp"
        android:hint="@string/login_password"/>

    <Button
        android:id="@+id/login_button"
        android:layout_marginTop="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/login_button"/>

</android.support.v7.widget.LinearLayoutCompat>