<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".CourseActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/toolbar_container"
            layout="@layout/customize_toolbar" />

        <FrameLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/toolbar_container">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <!--显示时间-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/white">
                    <TextView
                        android:id="@+id/year"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:layout_marginLeft="20dp"
                        android:textSize="20dp"
                        android:text="2019年"/>
                    <!--竖线-->
                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:background="#00FFFF"
                        />
                    <!--下拉方式选周数-->
                    <Spinner
                        android:id="@+id/switchWeek"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:layout_gravity="center"
                        />

                </LinearLayout>
                <!--分隔线-->
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#00FF7F"/>
                <!--显示星期-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:background="@android:color/white">
                    <com.teamfour.coursetabletools.UI.WeekTitle
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:layout_marginTop="10dp" />
                </LinearLayout>
                <!--显示课表详细信息-->
                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                        <!--显示多少节课-->
                        <LinearLayout
                            android:layout_width="25dp"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="119dp"
                                android:gravity="center"
                                android:text="@string/time_one"
                                android:textSize="12sp" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="119dp"
                                android:gravity="center"
                                android:text="@string/time_two"
                                android:textSize="12sp" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="119dp"
                                android:gravity="center"
                                android:text="@string/time_three"
                                android:textSize="12sp" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="119dp"
                                android:gravity="center"
                                android:text="@string/time_four"
                                android:textSize="12sp" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="119dp"
                                android:gravity="center"
                                android:text="@string/time_five"
                                android:textSize="12sp" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="119dp"
                                android:gravity="center"
                                android:text="@string/time_six"
                                android:textSize="12sp" />

                        </LinearLayout>
                        <View
                            android:layout_width="1dp"
                            android:layout_height="match_parent"
                            android:background="#E5E5E5"/>

                        <GridView
                            android:id="@+id/courceDetail"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@mipmap/background"
                            android:horizontalSpacing="1dp"
                            android:verticalSpacing="1dp"
                            android:numColumns="7"
                            android:stretchMode="columnWidth"
                            ></GridView>
                    </LinearLayout>
                </ScrollView>

            </LinearLayout>

        </FrameLayout>

    </RelativeLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/main_drawer" />

</android.support.v4.widget.DrawerLayout>